--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
 
-@import url("https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -10,8 +8,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-primary: #7AB2B2;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,5 +23,31 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: "Hind", sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+}
+
+h1, h2, h3, h4{
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+}
+h1{
+  font-size: 32px;
+}
+
+h2{
+ font-size: 28px;
+}
+
+h3{
   font-size: 20px;
+}
+
+h4{
+  font-size: 16px;
+  font-weight: medium;
+}
+
+.button-text{
+  font-weight: medium;
 }
