--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -8,46 +9,49 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --color-primary: #7AB2B2;
-
+  --color-primary: #7ab2b2;
+  --font-hind: var(--font-hind);
+  --font-montserrat: var(--font-montserrat);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+
+html {
+  box-sizing: border-box;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: "Hind", sans-serif;
+  font-family: var(--font-hind), "Hind", sans-serif;
   font-size: 16px;
   font-weight: normal;
 }
 
-h1, h2, h3, h4{
-  font-family: "Montserrat", sans-serif;
+h1,
+h2,
+h3,
+h4 {
+  font-family: var(--font-montserrat), "Montserrat", sans-serif;
   font-weight: bold;
 }
-h1{
+
+h1 {
   font-size: 32px;
 }
 
-h2{
- font-size: 28px;
+h2 {
+  font-size: 28px;
 }
 
-h3{
+h3 {
   font-size: 20px;
 }
 
-h4{
+h4 {
   font-size: 16px;
-  font-weight: medium;
+  font-weight: 500;
 }
 
-.button-text{
-  font-weight: medium;
+.button-text {
+  font-weight: 500;
 }
