--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,9 @@
 @import "tailwindcss";
 
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --secondary: #F0F7F7;
 }
 
 @theme inline {
@@ -12,8 +12,8 @@
   --color-primary: #7ab2b2;
   --font-hind: var(--font-hind);
   --font-montserrat: var(--font-montserrat);
+  --color-secondary: var(--secondary)
 }
-
 
 html {
   box-sizing: border-box;
@@ -23,7 +23,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-hind), "Hind", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: normal;
 }
 
@@ -36,17 +36,16 @@ h4 {
 }
 
 h1 {
-  font-size: 32px;
-}
-
-h2 {
   font-size: 28px;
 }
 
-h3 {
-  font-size: 20px;
+h2 {
+  font-size: 24px;
 }
 
+h3 {
+  font-size: 16px;
+}
 h4 {
   font-size: 16px;
   font-weight: 500;
@@ -54,4 +53,21 @@ h4 {
 
 .button-text {
   font-weight: 500;
+}
+
+@media screen and (min-width: 640px) {
+  h1 {
+    font-size: 32px;
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
+  body {
+    font-size: 16px;
+  }
 }
