--- a/app/globals.css
+++ b/app/globals.css
@@ -23,16 +23,25 @@
 
 html {
   box-sizing: border-box;
+  
+ 
 }
 
 body {
   background-image: url("/images/lines-background.svg");
   background-repeat: repeat;
   background-attachment: scroll;
+  background-color: var(--background);
   color: var(--foreground);
   font-family: var(--font-hind), "Hind", sans-serif;
   font-size: 14px;
   font-weight: normal;
+}
+
+@media screen and (max-width: 768px){
+  body{
+    background-image: url("/images/lines-background--mobile.svg");
+  }
 }
 
 h1,
